# Zoo-API-Data

./: .env.example  .gitignore  README.md  Weather_InExfill_Data.pbix  daily_gate_data.csv  tomorrow_zoo_weather.duckdb  tomorrow_zoo_weather_realtime.duckdb  tomorrow_zoo_weather_scores.duckdb  ytd_gate_data.csv
.devcontainer/: devcontainer.json
Sensource-API/: DailyTotal.py  DailyTotalQuery.py  README.md  YTDQuery.py  YearToDate.py  daily_gate_data.csv  pyproject.toml  ytd_gate_data.csv
Sensource-API/data/: YTD.data.duckdb  ZooData.duckdb
Zoo-WeatherAPI/: HistoricalWeatherAnalysis.py  PastWeekWeather.py  README.md  Test.py  TodayWeatherQuery.py  Weather Data.session.sql  WeatherCodes.json  package.json  query_weather.py
